--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,5 +53,14 @@
     "5": "Vaning Gibbous",
     "6": "Last Quarter",
     "7": "Vaning Crescent"
+  },
+  "day": {
+    "1": "Monday",
+    "2": "Tuesday",
+    "3": "Wednesday",
+    "4": "Thursday",
+    "5": "Friday",
+    "6": "Saturday",
+    "7": "Sunday"
   }
 }
